--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="/assets/css/atom-one-light.css">
-    <title>{{ site.name }}</title>
+	<title>{{ site.name }}</title>
 	<link rel="stylesheet" type="text/css" href="/assets/css/001.css">
 	<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
 	<script src="/assets/js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
+	<script>
+		if (window.location.host.includes("colega.eu") && window.location.protocol != "http:") {
+			window.location.protocol = "https:"
+		}
+	</script>
 </head>
 <body>
 	{{ content }}
