--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	<script src="/assets/js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 	<script>
-		if (window.location.host.includes("colega.eu") && window.location.protocol != "http:") {
+		if (window.location.host.includes("colega.eu") && window.location.protocol != "https:") {
 			window.location.protocol = "https:"
 		}
 	</script>
